@@ -1,0 +1,7 @@
+libsmi has originally been written by Frank Strauss, inspired by
+Juergen Schoenwaelder. Other people contributed to libsmi by reporting
+problems, suggesting various improvements or submitting actual code.
+Here is a list of these people.  Help me keeping it complete and
+exempt of errors.
+
+Jochen Friedrich <jochen@scram.de>
